removing return to top button, fixing footer styles and vertical spacing between home components.

--- a/src/css/_projects.scss
+++ b/src/css/_projects.scss
@@ -19,6 +19,7 @@
         padding: 20vh;
         background-size:cover;
         background-position: center;
+        background-attachment: fixed;
         @media only screen and (max-width:600px){
             padding:20vh 0 20vh 0;
         }
