--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -132,9 +132,11 @@ body {
     .inner {
         background-color: #fff;
         padding:50px;
+        min-height: 100vh;
         display:flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+        align-items: center;
     }
     .left-col{
         display:flex;
@@ -152,10 +154,7 @@ body {
         justify-self: stretch;
         display:flex;
         flex-direction: column;
-        justify-content: space-between;
-        h4{
-            font-size: 1.2em;
-        }
+        justify-content: center;
         p {
             font-size: 1em;
             max-width: 400px;   
@@ -179,13 +178,14 @@ body {
 }
 
 .btn-primary {
-    background-color: $med-blue;
+    background-color: rgb(69, 177, 180);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     border: none;
     border-radius: 2px;
 }
 .btn-primary:hover {
-    background-color: $light-blue;
+    background-color: rgb(53, 155, 158);
     border: none;
     border-radius: 2px;
 }
@@ -197,7 +197,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 10vh 0 0 0;
-    margin: 20vh 30px 20vh 30px;
+    margin: 30vh 30px 20vh 30px;
     @media screen and (max-width: 600px) {
         margin: 20vh 0 20vh 0;
     }
@@ -319,7 +319,7 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
 
 .social-media-bar{
     padding: 50px;
-    margin: 30vh  0 20vh 0;
+    margin: 20vh  0 20vh 0;
     @media only screen and (max-width:600px){
         margin: 15vh 0 0 0;
     }
@@ -334,8 +334,8 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
     background-attachment: fixed;
     background-position: top;
     background-size: cover;
-    border-bottom: 1px solid $gray;
-    border-top: 1px solid $gray;
+    border-bottom: 2px solid white;
+    border-top: 2px solid white;
     color: #fff;
     text-shadow: 0 0 4px #000;
     h1 {
@@ -377,44 +377,46 @@ $square-active-grad : linear-gradient(to left, rgba(50,50,50,0.9), rgba(50,50,50
     }
 }
 
-.return-top {
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
-    background: white;
-    position:absolute; bottom: 200px; right:20px;
-    border-radius: 3px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4);
-    color: $med-blue;
-    transition: 0.3s;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-.return-top:hover {
-    color: $light-blue;
-}
-
 .footer {
     background-color: $gray;
+    background-image: linear-gradient(to bottom, rgba(40, 97, 104, 0.8), rgba(40, 97, 104, 0.9)),
+    url(/images/conor-sexton-hRemch0ZDwI-unsplash-footer.jpg);
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    flex-wrap:wrap;
+    padding: 50px 10px 80px 10px;
+    @media only screen and (max-width:600px){
+        padding-top: 30px 10px 30px 10px;
+        flex-direction: column;
+        .right-col {
+            margin-bottom: 30px;
+        }
+    }
+    h3, p, a {
+        color: lightgray;
+    }
+    h3 {
+        font-family: $header-font;
+    }
+    .footer-underline {
+        max-width: 300px;
+        height: 1px;
+        background-color: lightgray;
+        margin: 5px 0 20px 0;
+    }
     p {
         font-size: 14px;
-        color: lightgray;
         margin:0;
     }
     a {
         font-size: 14px;
         text-decoration: none;
-        color: lightgray;
-        transition: color 0.4s;
+        transition: color 0.3s;
     }
     a:hover {
-        color: white;
-        transition: color 0.4s;
+        color: rgb(153, 154, 165);
+        transition: color 0.3s;
     }
     .left-col{
         display:flex;
